typewire/tests/compile_fail/transparent_enum.rs
use typewire::Typewire;

#[derive(Typewire)]
#[serde(transparent)]
enum Bad {
    A(u32),
    B(String),
}

fn main() {}
